# UNet-Denoise

./: .gitignore  CLDenoise.cpp  CLDenoise.h  CLLog.h  CLThreadPool.h  CMakeLists.txt  README.md  denoising.pro  example.cpp  main.cpp  run_clang_tidy.py  run_clang_tidy_extra.py  widget.cpp  widget.h
Log/: DenoiseLog.txt
denoising-base-unet-master/: denoise.py  denoising-base-unet-master.py
denoising-base-unet-master/UI/: denoise.py  denoise.ui  main.py
denoising-base-unet-master/doc/: README.md
denoising-base-unet-master/models/: BaseUNet.py  light.py  main.py  testing.py  torchscript.py  utils.py
denoising-base-unet-master/models/test/: testacc.py  timetest.py
denoising-base-unet-master/normal_algorithm/: opencv.py
denoising-base-unet-master/test/: timetest.py
doc/: Denoise.drawio  README.md
include/: CLDenoise.h  CLLog.h  SafeQueue.h  ThreadPool.h
log/: c++log.txt  modelacc.txt  pythonlog.txt
src/: CLDenoise.cpp  CLLog.cpp  CMakeLists.txt  Denoise.cpp
test/: CMakeLists.txt  DenoiseTest.cpp
